--- a/docs/css/dm.scss
+++ b/docs/css/dm.scss
@@ -10,7 +10,7 @@ $dm-brand-color-dark:      darken($dm-brand-color, 15%) !default;
 
 $dm-text-color:               #d4d3df !default;
 $dm-title-color:              #eee !default;
-$dm-background-color-1:       #27272e !default;
+$dm-background-color-1:       #2b2b32 !default;
 $dm-background-color-2:       #3e3e48 !default;
 $dm-background-color-code:    #343640 !default;
 $dm-background-color-hover:   #dddddd0f !default;
@@ -19,10 +19,11 @@ $dm-link-base-color:       lighten($dm-brand-color, 5%) !default;
 $dm-link-visited-color:    $dm-link-base-color !default;
 $dm-link-hover-color:      $dm-text-color !default;
 
-$dm-table-header-bg-color:  lighten($dm-background-color-1, 10%) !default;
-$dm-table-zebra-color-1:    lighten($dm-background-color-1, 4%) !default;
-$dm-table-zebra-color-2:    lighten($dm-background-color-1, 4%) !default;
-$dm-table-border-color:   #00000014 !default;
+$dm-table-header-text-color:  $dm-text-color !default;
+$dm-table-header-bg-color:    lighten($dm-background-color-1, 12%) !default;
+$dm-table-zebra-color-1:      lighten($dm-background-color-1, 6%) !default;
+$dm-table-zebra-color-2:      lighten($dm-background-color-1, 4%) !default;
+$dm-table-border-color:     #00000014 !default;
 
 @mixin darkmode-colors {
   --brand-color: #{$lm-brand-color};
@@ -41,6 +42,7 @@ $dm-table-border-color:   #00000014 !default;
   --link-visited-color: #{$dm-link-visited-color};
   --link-hover-color: #{$dm-link-hover-color};
 
+  --table-header-text-color: #{$dm-table-header-text-color};
   --table-header-bg-color: #{$dm-table-header-bg-color};
   --table-zebra-color-1: #{$dm-table-zebra-color-1};
   --table-zebra-color-2: #{$dm-table-zebra-color-2};
